add exception in mail service and fix keycloak data